--- a/Scene3.xaml
+++ b/Scene3.xaml
@@ -13,7 +13,7 @@
             <Setter Property="materialDesign:RippleAssist.Feedback" Value="#DD000000"></Setter>
             <Setter Property="Background" Value="Tomato"></Setter>
             <Setter Property="Foreground" Value="White"></Setter>
-            <Setter Property="BorderBrush" Value="Tomato"></Setter>
+            <Setter Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource Self}, Path=Background}"></Setter>
             <Setter Property="Height" Value="20"></Setter>
             <Setter Property="Width" Value="20"></Setter>
             <Setter Property="FontFamily" Value="Sugeoe UI"></Setter>
