--- a/Ticket_purchase1.xaml
+++ b/Ticket_purchase1.xaml
@@ -30,42 +30,58 @@
         </Style>
 
     </Window.Resources>
-    <Grid x:Name="MainGrid">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="170*"/>
-            <RowDefinition Height="15*"/>
-            <RowDefinition Height="55*"/>
-        </Grid.RowDefinitions>
-        <Border Grid.Row="1" Panel.ZIndex="1" Background="White" Grid.RowSpan="2"></Border>
-        <Slider Grid.Row="1" Panel.ZIndex="1" x:Name="ZoomSlider" Minimum="1" Maximum="5" Width="300" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <StackPanel Grid.Row="2" Panel.ZIndex="1" HorizontalAlignment="Center">
-            <Label x:Name="InitialPrice" VerticalAlignment="Center" FontSize="15">Цена: 0.00 грн.</Label>
-            <Label x:Name="Discount" VerticalAlignment="Center" FontSize="15">Скидка: 0%</Label>
-            <Label x:Name="OverallPrice" VerticalAlignment="Center" FontSize="17" FontWeight="Black">Всего: 0.00 грн.</Label>
-            <Button x:Name="PurchaseBtn" HorizontalAlignment="Center" FontSize="16" Click="PurchaseBtn_Click">Купить билеты</Button>
-        </StackPanel>
-        <Border Panel.ZIndex="1" Background="White" Grid.Column="1" Grid.RowSpan="3"></Border>
-        <Grid Grid.Column="1" x:Name="InfoGrid"  Panel.ZIndex="1" Grid.RowSpan="3" VerticalAlignment="Center">
+    <materialDesign:DialogHost>
+        <materialDesign:DialogHost.DialogContentTemplate>
+            <DataTemplate DataType="local: TextBlock">
+                <Grid Width="{Binding ActualWidth, ElementName=MainGrid}">
+                    <Grid Margin="20">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <TextBlock TextWrapping="Wrap" Text="{Binding Text}" Grid.Row="0" Margin="0,0,0,10"/>
+                        <Button Grid.Row="1" Click="DialogClose">Закрыть</Button>
+                    </Grid>
+                </Grid>
+            </DataTemplate>
+        </materialDesign:DialogHost.DialogContentTemplate>
+        <Grid x:Name="MainGrid">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition Height="170*"/>
                 <RowDefinition Height="15*"/>
-                <RowDefinition Height="61*"/>
-                <RowDefinition Height="15*"/>
+                <RowDefinition Height="55*"/>
             </Grid.RowDefinitions>
-            <!--ScrollViewer>
+            <Border Grid.Row="1" Panel.ZIndex="1" Background="White" Grid.RowSpan="2"></Border>
+            <Slider Grid.Row="1" Panel.ZIndex="1" x:Name="ZoomSlider" Minimum="1" Maximum="5" Width="300" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <StackPanel Grid.Row="2" Panel.ZIndex="1" HorizontalAlignment="Center">
+                <Label x:Name="InitialPrice" VerticalAlignment="Center" FontSize="15">Цена: 0.00 грн.</Label>
+                <Label x:Name="Discount" VerticalAlignment="Center" FontSize="15">Скидка: 0%</Label>
+                <Label x:Name="OverallPrice" VerticalAlignment="Center" FontSize="17" FontWeight="Black">Всего: 0.00 грн.</Label>
+                <Button x:Name="PurchaseBtn" HorizontalAlignment="Center" FontSize="16" Click="PurchaseBtn_Click">Купить билеты</Button>
+            </StackPanel>
+            <Border Panel.ZIndex="1" Background="White" Grid.Column="1" Grid.RowSpan="3"></Border>
+            <Grid Grid.Column="1" x:Name="InfoGrid"  Panel.ZIndex="1" Grid.RowSpan="3" VerticalAlignment="Center">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="15*"/>
+                    <RowDefinition Height="61*"/>
+                    <RowDefinition Height="15*"/>
+                </Grid.RowDefinitions>
+                <!--ScrollViewer>
                 <StackPanel>
                    
                 </StackPanel>
             </-->
-            <Label x:Name="AfishaLabel" Panel.ZIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Black" FontSize="22">Реверс</Label>
-            <Image Margin="10" Panel.ZIndex="1" x:Name="AfishaImg" Grid.Row="1" Source="Resources\pass-afisha.jpg"></Image>
-            <StackPanel Panel.ZIndex="1" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="2">
-                <materialDesign:PackIcon  HorizontalAlignment="Center" VerticalAlignment="Center" Kind="DateRange"></materialDesign:PackIcon>
-                <Label x:Name="AfishaDate" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16">20.05.2019 19:00</Label>
-            </StackPanel>
+                <Label x:Name="AfishaLabel" Panel.ZIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Black" FontSize="22">Реверс</Label>
+                <Image Margin="10" Panel.ZIndex="1" x:Name="AfishaImg" Grid.Row="1" Source="Resources\pass-afisha.jpg"></Image>
+                <StackPanel Panel.ZIndex="1" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="2">
+                    <materialDesign:PackIcon  HorizontalAlignment="Center" VerticalAlignment="Center" Kind="DateRange"></materialDesign:PackIcon>
+                    <Label x:Name="AfishaDate" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16">20.05.2019 19:00</Label>
+                </StackPanel>
+            </Grid>
         </Grid>
-    </Grid>
+    </materialDesign:DialogHost>
 </Window>
