--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -89,7 +89,7 @@
             </Viewbox>
         </DockPanel>
         <DockPanel Grid.Column="4" Margin="0,5,5,5" x:Name="UserManagement" HorizontalAlignment="Right">
-            <materialDesign:PopupBox Visibility="Visible" DockPanel.Dock="Right" x:Name="UserBox" Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}" Background="MediumSeaGreen" BorderBrush="MediumSeaGreen" 
+            <materialDesign:PopupBox Visibility="Collapsed" DockPanel.Dock="Right" x:Name="UserBox" Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}" Background="MediumSeaGreen" BorderBrush="MediumSeaGreen" 
   Style="{StaticResource MaterialDesignMultiFloatingActionAccentPopupBox}"
   PlacementMode="BottomAndAlignRightEdges"
   ToggleCheckedContentCommand="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Button}, Path=FloatingActionDemoCommand}"
